--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>FormMat</title>
+  <title>Anika Angular Chat</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
